--- a/index.html
+++ b/index.html
@@ -6,10 +6,67 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Honda CBR</title>
+    <!-- bootstrap css -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <!-- custom css -->
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
+    <header class="container-fluid bg-cbr-head">
+        <!-- head section start -->
+        <section class="container d-flex align-items-center">
+            <div class="text-white">
+                <p>Computer-controlled digital transistorized with electronic advance</p>
+                <h1 class="mb-3">Honda CBR 300R</h1>
+                <p class="w-75">The single-cylinder engine offers great fuel economy, with smooth and friendly
+                    torque
+                    delivery. And
+                    the
+                    affordable cost and responsive handling makes it a terrific bike for first-time riders, and for
+                    those
+                    looking to grow their garage.</p>
+                <!-- Button trigger modal -->
+                <button type="button" class="btn bg-btn text-white" data-bs-toggle="modal"
+                    data-bs-target="#exampleModal">
+                    Purchase
+                </button>
 
+                <!-- Modal -->
+                <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                    aria-hidden="true">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title text-dark" id="exampleModalLabel">Confirm</h5>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                    aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body text-dark">
+                                Honda CBR300R is launching in India in December 2021 in the expected price range of ₹
+                                2,00,000 to ₹ 2,30,000.Do you want to buy it?
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                <button type="button" class="btn btn-primary">Buy now</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div>
+                <img src="images/header-bike.png" alt="">
+            </div>
+        </section>
+        <!-- head section end -->
+    </header>
+    <main>
+
+    </main>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
