--- a/index.html
+++ b/index.html
@@ -62,7 +62,19 @@
         <!-- head section end -->
     </header>
     <main>
-
+        <!-- top main section start -->
+        <section>
+            <div class="text-center top-detail">
+                <h1>Fetured Bikes 2021</h1>
+                <p class="txt-color">Best bike collection</p>
+            </div>
+            <div class="d-flex top-pic justify-content-around">
+                <img class="img-gray" src="images/feature-bike.jpg" alt="">
+                <img src="images/feature-bike.jpg" alt="">
+                <img class="img-gray" src="images/feature-bike.jpg" alt="">
+            </div>
+        </section>
+        <!-- top main section end -->
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
