--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 </head>
 
 <body>
-    <header class="container-fluid bg-cbr-head">
+    <header class="container-lg-fluid bg-cbr-head">
         <!-- head section start -->
-        <section class="container d-flex align-items-center">
+        <section class="container d-lg-flex align-items-center">
             <div class="text-white">
                 <p>Computer-controlled digital transistorized with electronic advance</p>
                 <h1 class="mb-3">Honda CBR 300R</h1>
@@ -55,8 +55,9 @@
                     </div>
                 </div>
             </div>
-            <div>
-                <img src="images/header-bike.png" alt="">
+            <div class="">
+                <img class="d-none d-lg-block d-md-block" src="images/header-bike.png" alt="">
+                <img class="d-md-none d-lg-none d-sm-none" src="images/header-bike.png" width="321" height="260" />
             </div>
         </section>
         <!-- head section end -->
@@ -68,7 +69,7 @@
                 <h1>Fetured Bikes 2021</h1>
                 <p class="txt-color">Best bike collection</p>
             </div>
-            <div class="d-flex top-pic justify-content-evenly">
+            <div class="d-lg-flex top-pic justify-content-evenly">
                 <img class="img-gray" src="images/feature-bike.jpg" alt="">
                 <img src="images/feature-bike.jpg" alt="">
                 <img class="img-gray" src="images/feature-bike.jpg" alt="">
@@ -78,9 +79,9 @@
         <!-- card section -->
         <section class="overflow-hidden my-5">
             <h1 class="text-center mb-5">Happy <span class="txt-color">Clients says</span></h1>
-            <div class="row row-cols-1 row-cols-md-3">
+            <div class="row row-cols-1 row-cols-md-3 g-4 ms-lg-5 me-lg-5">
                 <div class="col">
-                    <div class="card h-100 w-75 d-flex align-items-center card-1">
+                    <div class="card h-100 w-100 d-flex align-items-center">
                         <img class="my-card-img card-layout" src="images/user-1.png" class="card-img-top" alt="...">
                         <div class="card-body">
                             <p class="card-text">Slate helps you see how <br>
@@ -116,7 +117,7 @@
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card h-100 w-75 d-flex align-items-center card-2">
+                    <div class="card h-100 w-100 d-flex align-items-center">
                         <img class="my-card-img card-layout" src="images/user-2.png" class="card-img-top" alt="...">
                         <div class="card-body">
                             <p class="card-text">Slate helps you see how <br>
@@ -152,7 +153,7 @@
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card h-100 w-75 d-flex align-items-center">
+                    <div class="card h-100 w-100 d-flex align-items-center">
                         <img class="my-card-img card-layout" src="images/user-3.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <p class="card-text">Slate helps you see how <br>
@@ -184,6 +185,62 @@
                             </div>
                             <p class="text-center text-primary mt-3">Regina Miles</p>
                             <p class="text-center">Banker</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- card section end -->
+        <!-- faq section -->
+        <section class="container-lg my-5">
+            <h1 class="text-center mb-5">Frequently Asked <span class="txt-color">Questions</span></h1>
+            <div class="d-lg-flex justify-content-evenly align-items-center">
+                <div>
+                    <img class="faq-img" src="images/faq.png" alt="">
+                </div>
+                <div>
+                    <div class="accordion" id="accordionExample">
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="headingOne">
+                                <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                                    What is the engine displacement of Honda CBR300R?
+                                </button>
+                            </h2>
+                            <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
+                                data-bs-parent="#accordionExample">
+                                <div class="accordion-body">
+                                    The engine displacement of Honda CBR300R is 286 cc
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="headingTwo">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                                    What is the Start type of this bike?
+                                </button>
+                            </h2>
+                            <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
+                                data-bs-parent="#accordionExample">
+                                <div class="accordion-body">
+                                    Honda CBR300R has Self Start Only.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="headingThree">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                                    What is the Tyre Type of Honda CBR300R?
+                                </button>
+                            </h2>
+                            <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
+                                data-bs-parent="#accordionExample">
+                                <div class="accordion-body">
+                                    Honda CBR300R has Tubeless tyres.
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
